# compiler

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  calls.bat  cfg.bat  cfg.dot  closure_cfg.bat  closure_cfg.dot  closure_cfg.js  closure_debug.ts  colors.bat  compare.js  f.txt  package-lock.json  package.json  predicate.js  props.bat  reduce.bat  relo.bat  rust-toolchain  thoughts.txt  tsc_test.js  upstream_projects.txt
crates/ast/: Cargo.toml  out.rs
crates/ast/src/: class.rs  decl.rs  expr.rs  function.rs  ident.rs  jsx.rs  lib.rs  lit.rs  macros.rs  module.rs  module_decl.rs  node.rs  operators.rs  pat.rs  prop.rs  stmt.rs  typescript.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/codegen/: Cargo.toml
crates/codegen/benches/: bench.rs  with_parse.rs
crates/codegen/macros/: Cargo.toml
crates/codegen/macros/src/: fold.rs  lib.rs
crates/codegen/src/: comments.rs  config.rs  decl.rs  expr.rs  jsx.rs  lib.rs  list.rs  macros.rs  stmt.rs  tests.rs  text_writer.rs  typescript.rs  util.rs
crates/codegen/src/text_writer/: basic_impl.rs  semicolon.rs
crates/common/: Cargo.toml
crates/common/examples/: add_bitflags.rs
crates/common/src/: chars.rs  comments.rs  eq.rs  errors.rs  input.rs  integer_decode.rs  lib.rs  pass.rs  pos.rs  source_map.rs  sync.rs  syntax_pos.rs
crates/common/src/errors/: diagnostic.rs  diagnostic_builder.rs  emitter.rs  snippet.rs  styled_buffer.rs
crates/common/src/rustc_data_structures/: sip128.rs
crates/common/src/syntax_pos/: analyze_source_file.rs  hygiene.rs
crates/common/src/util/: take.rs
crates/common/tests/: ast_serde.rs  attr_interop.rs  concurrent.rs  empty.rs  source_map.rs  spanned_attr.rs
crates/compiler/: Cargo.toml  bench_base.bat  bench_cmp.bat  closure_passes.txt  notes.txt
crates/compiler/benches/: bench_main.rs
crates/compiler/benches/benchmarks/: props.rs
crates/compiler/benches/files/: small_typescript.js
crates/compiler/cases/: 1.ts  2.ts  3.js  4.js
crates/compiler/src/: CoalesceVariableNames.rs  DataFlowAnalysis.rs  DefaultNameGenerator.rs  LiveVariablesAnalysis.rs  MaybeReachingVariableUse.rs  OptimizeArgumentsArray.rs  RenameLabels.rs  RenameVars.rs  abstract_scope.rs  ast.rs  binder.rs  checker.rs  control_flow_analysis.rs  control_flow_graph.rs  convert.rs  convert_to_dot_properties.rs  ctx.rs  data_flow_analysis.rs  dead_assignment_elimination.rs  denormalize.rs  f.rs  find_vars.rs  flow_scope.rs  foo.rs  ident.rs  inline_functions.rs  lattice_element.rs  lib.rs  linked_flow_scope.rs  mapping.txt  node.rs  normalize.rs  normalize_properties.rs  normalize_shorthand.rs  optimize_properties.rs  optimize_properties2.rs  optimize_properties3.rs  print.rs  static_scope.rs  static_slot.rs  (+16 more)
crates/compiler/src/CoalesceVariableNames/: tests.rs
crates/compiler/src/DataFlowAnalysis/: tests.rs
crates/compiler/src/LiveVariablesAnalysis/: tests.rs
crates/compiler/src/MaybeReachingVariableUse/: tests.rs
crates/compiler/src/RenameVars/: tests.rs
crates/compiler/src/checker/: flow.rs  index_set.rs  mod.rs  node_builder.rs
crates/compiler/src/colors/: color.rs  color_collector.rs  color_registry.rs
crates/compiler/src/control_flow/: ControlFlowAnalysis.rs  ControlFlowGraph.rs  mod.rs  node.rs  print.rs  tests.rs  util.rs
crates/compiler/src/custom/: mod.rs
crates/compiler/src/disambiguate/: AmbiguateProperties.rs  ClusterPropagator.rs  ColorFindPropertyReferences.rs  ColorGraphBuilder.rs  ColorGraphNode.rs  ColorGraphNodeFactory.rs  DisambiguateProperties.rs  Invalidation.rs  PropertyClustering.rs  UseSiteRenamer.rs  mod.rs  tests.rs
crates/compiler/src/graph/: FixedPointGraphTraversal.rs  GraphColoring.rs  LowestCommonAncestorFinder.rs  StandardUnionFind.rs  mod.rs
crates/compiler/src/optimize_properties/: graph.rs  simple_set.rs  tests.rs
crates/compiler/src/optimize_properties2/: DataFlowAnalysis2.rs  color.rs  color_graph_builder.rs  color_graph_node.rs  color_graph_node_factory.rs  color_registry.rs  function.rs  graph.rs  hashable_map.rs  simple_set.rs  template.rs  tests.rs  types.rs  unions.rs  utils.rs
crates/compiler/src/optimize_properties3/: graph.rs  growable_unionfind.rs  tests.rs  unionfind.rs
crates/compiler/src/peephole/: fuse_stmts.rs  mod.rs
crates/compiler/src/resolver/: mod.rs  scope.rs  tests.rs
crates/compiler/src/typing/: all_type.rs  big_int_type.rs  boolean_literal_set.rs  boolean_type.rs  js_type.rs  mod.rs  null_type.rs  number_type.rs  object_type.rs  registry.rs  resolver.rs  string_type.rs  symbol_type.rs  types.rs  unknown_type.rs  (+2 more)
crates/compiler/tests/: tsc.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/benches/: bench_main.rs
crates/parser/src/: context.rs  error.rs  lib.rs  macros.rs  main.rs  token.rs
crates/parser/tests/: strip.rs  test262.rs
crates/transform_testing/: Cargo.toml
crates/transform_testing/src/: lib.rs
crates/ts/: Cargo.toml
crates/ts/benches/: bench_main.rs
crates/ts/diagnostics/: Cargo.toml  build.rs  diagnosticMessages.json
crates/ts/src/: binder.rs  core.rs  lib.rs  node.rs  our_types.rs  parser.rs  path.rs  scanner.rs  types.rs  types_old.rs  utilities.rs  utilitiesPublic.rs
crates/ts/tests/: test262.rs  tsc.rs
crates/visit/: Cargo.toml  d.rs  out.rs
crates/visit/src/: lib.rs
macros/ast_node/: Cargo.toml
macros/ast_node/src/: ast_node_macro.rs  enum_deserialize.rs  lib.rs  spanned.rs
macros/ast_node/tests/: spanned_attr.rs
macros/clone_node/: Cargo.toml
macros/clone_node/src/: lib.rs
macros/common/: Cargo.toml
macros/common/src/: binder.rs  derive.rs  lib.rs  syn_ext.rs
macros/eq_ignore/: Cargo.toml
macros/eq_ignore/src/: lib.rs
macros/string_enum/: Cargo.toml
macros/string_enum/src/: lib.rs
macros/v/: Cargo.toml
macros/v/src/: lib.rs
testing/: Cargo.toml
testing/macros/: Cargo.toml
testing/macros/src/: fixture.rs  lib.rs
testing/src/: diag_errors.rs  lib.rs  output.rs  paths.rs  string_errors.rs
visit/macros/: Cargo.toml
visit/macros/src/: lib.rs
(+149 files in other folders)
