[workspace]
members = [
    "crates/*",
    "macros/*"
]
resolver = "1"

[profile.release]
# codegen-units = 2
codegen-units = 1
debug = true
debug-assertions = false
# opt-level = 2
# lto = false
lto = "thin"

[profile.bench]
# codegen-units = 1
debug = true
codegen-units = 2
debug-assertions = false
opt-level = 2
lto = false