[workspace]
members = ["crates/*", "macros/*"]
resolver = "1"

[workspace.dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
arrayvec = "0.7"
atty = "0.2"
bitflags = "2.6"
cfg-if = "1.0.0"
criterion = "0.5"
difference = "2.0.0"
either = "1.6.1"
env_logger = "0.7.1"
glob = "0.3"
indexmap = "2.2.6"
lexical = "6.1.0"
num-bigint = "0.4.6"
num-traits = "0.2.18"
once_cell = "1.19.0"
petgraph = "0.6.5"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rayon = "1.10.0"
regex = "1.10.5"
relative-path = "1.3.2"
rustc-hash = "1.1.0"
scoped-tls = "1.0.1"
serde = "1.0.204"
serde_json = "1.0.120"
sourcemap = "6.2"
string_cache = "0.8.4"
string_cache_codegen = "0.5.2"
syn = "2.0.72"
termcolor = "1.0"
tracing = "0.1.28"
tracing-subscriber = "0.3.18"
unicode-width = "0.1.4"
unicode-id-start = "1.4.0"

[profile.release]
# codegen-units = 2
codegen-units = 1
debug = true
debug-assertions = false
# opt-level = 2
# lto = false
lto = "thin"

[profile.bench]
# codegen-units = 1
debug = true
codegen-units = 2
debug-assertions = false
opt-level = 2
lto = false
