[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "testing"
version = "0.1.0"

[dependencies]
ansi_term = "0.12.1"
difference = "2"
env_logger = "0.7.1"
global_common = {version = "0.1.0", path = "../crates/common", features = ["tty-emitter"]}
log = "0.4"
once_cell = "1"
pretty_assertions = "0.6.1"
regex = "1"
testing_macros = {version = "0.1", path = "./macros"}
