[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "testing"
version = "0.1.0"

[dependencies]
ansi_term = "0.12.1"
difference = "2"
env_logger = "0.7.1"
global_common = {path = "../crates/common", features = ["tty-emitter"]}
once_cell = "1"
pretty_assertions = "0.7.2"
regex = "1"
testing_macros = {path = "./macros"}
tracing = "0.1.28"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
