[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "testing"
version = "0.1.0"

[dependencies]
ansi_term = { workspace = true }
difference = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = {workspace = true, features = ["env-filter"]}

global_common = {path = "../crates/common", features = ["tty-emitter"]}
testing_macros = {path = "./macros"}
