[package]
name = "ast"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

[dependencies]
num-bigint = { workspace = true }
rustc-hash = { workspace = true }

ast_node = {path = "../../macros/ast_node"}
atoms = {path = "../atoms"}
clone_node = {path = "../../macros/clone_node"}
global_common = {path = "../common"}
index = {path = "../index"}
node_id = {path = "../../macros/node_id"}
string_enum = {path = "../../macros/string_enum"}
