[package]
name = "cli"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ast = {path = "../ast"}
compiler = {path = "../compiler"}
global_common = {path = "../common", features = ["tty-emitter", "sourcemap"]}
parser = {path = "../parser"}
codegen = {path = "../codegen"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"