[package]
name = "cli"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

ast = {path = "../ast"}
codegen = {path = "../codegen"}
compiler = {path = "../compiler"}
global_common = {path = "../common", features = ["tty-emitter", "sourcemap"]}
parser = {path = "../parser"}