[package]
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0/MIT"
name = "codegen"
repository = "https://github.com/swc-project/swc.git"
version = "0.1.0"

[dependencies]
bitflags = "1"
num-bigint = {version = "0.4.6", features = ["serde"]}
sourcemap = "6"

ast = {version = "0.1.0", path = "../ast"}
atoms = {path = "../atoms"}
global_common = {version = "0.1.0", path = "../common"}
parser = {version = "0.1.0", path = "../parser"}

[dev-dependencies]
testing = {version = "0.1.0", path = "../../testing"}

global_common = {version = "0.1.0", path = "../common", features = ["sourcemap"]}
