[package]
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0/MIT"
name = "codegen"
repository = "https://github.com/swc-project/swc.git"
version = "0.1.0"

[dependencies]
bitflags = "1"
num-bigint = {version = "0.4.6", features = ["serde"]}
sourcemap = "6"

ast = {path = "../ast"}
atoms = {path = "../atoms"}
global_common = {path = "../common"}
parser = {path = "../parser"}

[dev-dependencies]
testing = {path = "../../testing"}

global_common = {path = "../common", features = ["sourcemap"]}
