[package]
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0/MIT"
name = "codegen"
repository = "https://github.com/swc-project/swc.git"
version = "0.1.0"

[dependencies]
bitflags = { workspace = true }
num-bigint = { workspace = true, features = ["serde"] }
sourcemap = { workspace = true }

ast = { path = "../ast" }
atoms = { path = "../atoms" }
custom_alloc = { path = "../custom_alloc" }
global_common = { path = "../common" }
parser = { path = "../parser" }

[dev-dependencies]
testing = { path = "../../testing" }

global_common = { path = "../common", features = ["sourcemap"] }
