[package]
name = "global_common"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

[features]
tty-emitter = ["atty", "termcolor"]

[dependencies]
atty = {version = "0.2", optional = true}
cfg-if = "1.0.0"
either = "1.6.1"
num-bigint = "0.4.6"
once_cell = "1"
rustc-hash = "1.1.0"
scoped-tls = {version = "1"}
sourcemap = {version = "6", optional = true}
termcolor = {version = "1.0", optional = true}
tracing = "0.1.28"
unicode-width = "0.1.4"

eq_ignore_macros = {version = "0.1", path = "../../macros/eq_ignore"}
global_visit = {version = "0.1.0", path = "../../visit"}

[dev-dependencies]
rayon = "1"