[package]
name = "global_common"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

[features]
tty-emitter = ["atty", "termcolor"]

[dependencies]
atty = { workspace = true, optional = true}
cfg-if = { workspace = true }
either = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
scoped-tls = { workspace = true }
sourcemap = {workspace = true, optional = true}
termcolor = { workspace = true, optional = true}
tracing = { workspace = true }
unicode-width = { workspace = true }

eq_ignore_macros = {path = "../../macros/eq_ignore"}
global_visit = {path = "../../visit"}

[dev-dependencies]
rayon = { workspace = true }