[package]
name = "compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {path = "../ast"}
bitflags = "1.3"
global_common = {path = "../common"}
global_visit = {path = "../../visit"}
atoms = {path = "../atoms"}
index = {path = "../index"}
indexmap = "1.9.1"
ecma_visit = {path = "../visit"}
lexical = {version = "6.1.0", features = ["power-of-two", "format"]}
petgraph = "0.6.0"
rustc-hash = "1.1.0"
serde = {version = "1", features = ["derive"]}
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.3"
testing = {path = "../../testing"}
parser = {path = "../parser"}
codegen = {path = "../codegen"}

[[bench]]
name = "bench_main"
harness = false