[package]
name = "compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7" }
bitflags = "1.3"
indexmap = "2.2.6"
lexical = {version = "6.1.0", features = ["power-of-two", "format"]}
petgraph = "0.6.5"
rustc-hash = "1.1.0"
serde = {version = "1", features = ["derive"]}

ast = {path = "../ast"}
atoms = {path = "../atoms"}
ecma_visit = {path = "../visit"}
global_common = {path = "../common"}
global_visit = {path = "../../visit"}
index = {path = "../index"}

[dev-dependencies]
criterion = "0.3"

testing = {path = "../../testing"}
parser = {path = "../parser"}
codegen = {path = "../codegen"}

[[bench]]
name = "bench_main"
harness = false