[package]
name = "compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { workspace = true }
indexmap = { workspace = true }
lexical = { workspace = true, features = ["power-of-two", "format"]}
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"]}

ast = {path = "../ast"}
atoms = {path = "../atoms"}
ecma_visit = {path = "../visit"}
global_common = {path = "../common"}
index = {path = "../index"}

[dev-dependencies]
criterion = { workspace = true }

testing = {path = "../../testing"}
parser = {path = "../parser"}
codegen = {path = "../codegen"}

[[bench]]
name = "bench_main"
harness = false