[package]
name = "context"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast2 = {path = "../ast2"}
global_common = {path = "../common", features = ["tty-emitter", "sourcemap"]}
arena = {path = "../arena"}
index = {path = "../index"}