[package]
name = "parser"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
either = { workspace = true }
num-bigint = { workspace = true }
serde = {workspace = true, features = ["derive"]}
unicode-xid = { workspace = true }

ast = {path = "../ast"}
ast_node = {path = "../../macros/ast_node"}
atoms = {path = "../atoms"}
ecma_visit = {path = "../visit"}
global_common = {path = "../common"}
string_enum = {path = "../../macros/string_enum"}

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

testing = {path = "../../testing"}
transform_testing = { path = "../transform_testing" }

[[bench]]
name = "bench_main"
harness = false