[package]
name = "parser"
version = "0.1.0"
authors = ["Campbell <campbell.wass@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
either = { workspace = true }
num-bigint = { workspace = true }
serde = {workspace = true, features = ["derive"]}
unicode-xid = { workspace = true }

ast = {path = "../ast"}
atoms = {path = "../atoms"}
ecma_visit = {path = "../visit"}
global_common = {path = "../common"}

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

testing = {path = "../../testing"}
transform_testing = { path = "../transform_testing" }

[[bench]]
name = "bench_main"
harness = false