[package]
edition       = "2021"
name          = "transform_testing"
version       = "0.1.0"

[dependencies]
ansi_term  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sourcemap  = { workspace = true }

ast = { path = "../ast" }
codegen = { path = "../codegen" }
ecma_visit = { path = "../visit" }
global_common = { path = "../common", features = ["sourcemap"] }
parser = { path = "../parser" }
testing = { path = "../../testing" }