[package]
name = "ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
diagnostics = {path = "./diagnostics"}
index = {path = "../index"}
lexical = {version = "6.1.0", features = ["power-of-two", "format"]}
once_cell = "1.15.0"
regex = {version = "1.6.0"}
rustc-hash = "1.1.0"
unicode-id  = "0.3"

[dev-dependencies]
criterion = "0.3"
glob = "0.3.0"

[[bench]]
name = "bench_main"
harness = false