[package]
description = "Visitors for ecmascript nodes which works on stable rustc"
edition = "2018"
license = "Apache-2.0/MIT"
name = "ecma_visit"
version = "0.1.0"

[dependencies]
ast = {path = "../ast"}
global_common = {path = "../common"}
global_visit = {path = "../../visit"}
num-bigint = {version = "0.2", features = ["serde"]}
swc_atoms = "0.2"
