[package]
description = "Visitors for ecmascript nodes which works on stable rustc"
edition = "2018"
license = "Apache-2.0/MIT"
name = "ecma_visit"
version = "0.1.0"

[dependencies]
num-bigint = { workspace = true }

ast = {path = "../ast"}
atoms = {path = "../atoms"}
global_common = {path = "../common"}
global_visit = {path = "../../visit"}
