[package]
description = "Macros for ast nodes."
edition = "2018"
license = "Apache-2.0/MIT"
name = "ast_node"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
pmutil = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "fold", "parsing", "printing"] }

macro_common = {path = "../common"}

[dev-dependencies]
global_common = {path = "../../crates/common"}