[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "clone_node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pmutil = { workspace = true }
proc-macro2 = { workspace = true }
syn = {workspace = true, features = ["parsing", "full"]}
