[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "macro_common"
version = "0.1.0"

[dependencies]
pmutil = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "visit", "parsing", "full", "printing", "extra-traits"] }
