[package]
description = "Macros for EqIgnoreSpan and TypeEq."
edition = "2018"
license = "Apache-2.0/MIT"
name = "eq_ignore_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
pmutil = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = {workspace = true, features = ["full"]}
