[package]
description = "String based enum."
edition = "2018"
license = "Apache-2.0/MIT"
name = "string_enum"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"

macro_common = {version = "0.1.0", path = "../common"}

[dependencies.syn]
features = ["full", "parsing", "printing", "extra-traits"]
version = "1"