[package]
description = "String based enum."
edition = "2018"
license = "Apache-2.0/MIT"
name = "string_enum"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
pmutil = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "printing", "extra-traits"] }

macro_common = {path = "../common"}