[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "v"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
macro_common = {version = "0.1.0", path = "../common"}
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["parsing", "full"]}
