[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "testing_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
glob = "0.3"
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"
regex = "1"
relative-path = "1.3.2"
syn = {version = "1", features = ["fold", "parsing", "full", "extra-traits"]}
