[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "testing_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
pmutil = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
relative-path = { workspace = true }
syn = {workspace = true, features = ["fold", "parsing", "full", "extra-traits"]}
