[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "visit_macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["parsing", "full"]}

macro_common = {version = "0.1.0", path = "../../macros/common"}
