[package]
name = "diagnostics"
build = "build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
regex = {version = "1.6.0", features = ["pattern"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["preserve_order"]}
